Fix padding and margin on mobile

--- a/client/my-sites/plans/jetpack-plans/product-store/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/style.scss
@@ -3,6 +3,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin: 3em 0;
+        padding: 0 1.5em;
 
         &--headline {
             font-size: $font-title-large;
